Fixed bug with z-index headerbar and tinymce

--- a/ui/themes/default/style.css
+++ b/ui/themes/default/style.css
@@ -87,7 +87,7 @@ body {
     margin: 0px;
     padding: 0px;
     table-layout: auto;
-    z-index: 2;
+    z-index: 10;
 }
 
 .headerbar td {
